# shorts

./: .env.example  .gitattributes  .gitignore  CONFIGURAR_YOUTUBE.md  CONTRIBUTING.md  Dockerfile  README.md  VERSAO_CONSOLIDADA.md  app.py  docker-compose.yml  packages.txt  pyproject.toml  requirements.txt
.streamlit/: config.toml
shorts_factory/: __init__.py  config.py  downloader.py  io_utils.py  media.py  metadata.py  renderer.py  scoring.py  subtitles.py  transcription.py  youtube_upload.py
