[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shorts-coach-factory"
version = "1.1.0"
description = "Pipeline Streamlit para transformar vídeos longos em Shorts legendados."
readme = "README.md"
requires-python = ">=3.10,<3.14"

[tool.setuptools.packages.find]
where = ["."]
include = ["shorts_factory*"]
